# prevail

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  test-schema.yaml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  release.yaml  test-installation.yml  test-installation.yml.example  validate-yaml.yml
cmake/: SetupBoostHeaders.cmake  SetupYAMLCPP.cmake  prevailConfig.cmake.in
docs/: README.md  abstract-domains.md  abstract-interpretation.md  architecture.md  building.md  cfg.md  compare-abstract-to-concrete-state.md  failure-slicing.md  feature-support-matrix.md  glossary.md  instruction-semantics.md  llm-context.md  memory-model.md  testing.md  type-system.md
docs/parity/: README.md  btf-semantics.md  call-model.md  helper-families.md  isa.md  lifetime.md  map-types.md  pointer-type-classes.md  program-types.md
docs/proposals/: diagnostic-reporting-roadmap.md  diagnostic-reporting-spec.md
examples/using_installed_package/: .gitignore  CMakeLists.txt  README.md  TESTING.md  TESTING_DETAILS.md  main.cpp
scripts/: .check-license.ignore  audit_verify_reasons.py  check-license.sh  check_conformance_list.py  format-code  format-code.ps1  generate_elf_inventory.py  generate_verify_project_tests.py  pre-commit  rename_classes.py  run-tests-parallel.ps1  run-tests-parallel.sh  save_outputs.py  test_install.ps1  test_install.sh  update_verify_expectations.py
src/: analysis_context.hpp  analysis_engine.cpp  analysis_engine.hpp  asm_cfg.cpp  asm_files.cpp  asm_files.hpp  asm_marshal.cpp  asm_marshal.hpp  asm_ostream.cpp  asm_parse.cpp  asm_parse.hpp  asm_syntax.hpp  asm_unmarshal.cpp  asm_unmarshal.hpp  assertions.cpp  config.hpp  crab_verifier.cpp  crab_verifier.hpp  ebpf_base.h  ebpf_verifier.hpp  ebpf_vm_isa.hpp  elf_loader.cpp  elf_loader.hpp  fwd_analyzer.cpp  helpers.hpp  main.cpp  platform.hpp  platform_ops.hpp  platform_ops_prevail.hpp  prevail_mcp.cpp  printing.cpp  program.hpp  result.cpp  result.hpp  spec_type_descriptors.hpp  string_constraints.cpp  string_constraints.hpp  verifier.hpp
src/arith/: dsl_syntax.hpp  linear_constraint.hpp  linear_expression.hpp  num_big.hpp  num_extended.hpp  num_int128.hpp  num_safeint.hpp  variable.hpp
src/cfg/: cfg.hpp  label.hpp  wto.cpp  wto.hpp
src/crab/: add_bottom.hpp  array_domain.cpp  array_domain.hpp  bitset_domain.cpp  bitset_domain.hpp  cfg.hpp  cow.hpp  dsl_syntax.hpp  dsu.hpp  ebpf_checker.cpp  ebpf_domain.cpp  ebpf_domain.hpp  ebpf_transformer.cpp  extrapolator.cpp  extrapolator.hpp  finite_domain.cpp  finite_domain.hpp  fwd_analyzer.cpp  fwd_analyzer.hpp  interval.cpp  interval.hpp  label.hpp  linear_constraint.hpp  linear_expression.hpp  linear_relation_domain.cpp  linear_relation_domain.hpp  rcp.cpp  rcp.hpp  region_semantics.cpp  region_semantics.hpp  small_bitset_domain.hpp  split_dbm.cpp  split_dbm.hpp  thresholds.cpp  thresholds.hpp  type_domain.cpp  type_domain.hpp  type_encoding.hpp  type_equality_domain.cpp  type_equality_domain.hpp  (+13 more)
src/crab/splitdbm/: adapt_sgraph.hpp  core_dbm.cpp  core_dbm.hpp  definitions.hpp  graph_ops.hpp  graph_views.hpp  heap.hpp  split_dbm.cpp  split_dbm.hpp
src/crab_utils/: adapt_sgraph.hpp  debug.cpp  debug.hpp  dsu.hpp  graph_ops.hpp  heap.hpp  lazy_allocator.hpp  num_big.hpp  num_extended.hpp  num_safeint.hpp  num_safety.hpp  prevail_errors.hpp  stats.cpp  stats.hpp
src/io/: elf_core_reloc.cpp  elf_extern_resolve.cpp  elf_loader.cpp  elf_loader.hpp  elf_map_parser.cpp  elf_reader.cpp  elf_reader.hpp
src/ir/: arg_kind.hpp  assertions.cpp  call_resolver.cpp  call_resolver.hpp  cfg_builder.cpp  kfunc.cpp  kfunc.hpp  marshal.cpp  marshal.hpp  parse.cpp  parse.hpp  program.hpp  syntax.hpp  unmarshal.cpp  unmarshal.hpp
src/linux/: kfunc.cpp  kfunc.hpp  linux_platform.cpp  linux_platform.hpp
src/linux/gpl/: spec_prototypes.cpp  spec_type_descriptors.hpp
src/main/: check.cpp  linux_verifier.cpp  linux_verifier.hpp  memsize_linux.hpp  memsize_windows.hpp
src/mcp/: README.md  analysis_engine.cpp  analysis_engine.hpp  json_serializers.cpp  json_serializers.hpp  mcp_server.cpp  mcp_server.hpp  mcp_transport.cpp  mcp_transport.hpp  platform_ops.hpp  platform_ops_prevail.hpp  prevail_headers.hpp  tools.cpp  tools.hpp
src/spec/: ebpf_base.h  function_prototypes.hpp  type_descriptors.hpp  vm_isa.hpp
src/test/: conformance_check.cpp  ebpf_yaml.cpp  ebpf_yaml.hpp  marshal.cpp  old_test_verify.cpp  parse.cpp  parse.hpp  run_yaml.cpp  setup_msvc_debug.cpp  test_analysis_context.cpp  test_array_domain.cpp  test_cfg_builder_passes.cpp  test_conformance.cpp  test_dsu.cpp  test_ebpf_domain.cpp  test_ebpf_transformer.cpp  test_elf_loader.cpp  test_failure_slice.cpp  test_int128.cpp  test_interval_bitwise.cpp  test_join.cpp  test_linear_relation_domain.cpp  test_marshal.cpp  test_mcp.cpp  test_platform_tables.cpp  test_print.cpp  test_runtime_config.cpp  test_sign_extension.cpp  test_string_constraints.cpp  test_subsumption.cpp  test_type_domain.cpp  test_type_to_num.cpp  test_verify.cpp  test_verify.hpp  test_verify_bcc.cpp  test_verify_bpf_cilium_test.cpp  test_verify_build.cpp  test_verify_cilium.cpp  test_verify_cilium_core.cpp  test_verify_cilium_ebpf.cpp  (+16 more)
test-data/: add.yaml  assign.yaml  atomic.yaml  bitop.yaml  call.yaml  calllocal.yaml  callx.yaml  ctx.yaml  elf_inventory.json  jump.yaml  linear_relations.yaml  llm-context-tests.md  loop.yaml  map.yaml  movsx.yaml  nonconvex.yaml  observe.yaml  packet.yaml  pointer.yaml  ptr_sum_binding.yaml  sdivmod.yaml  sext.yaml  stack.yaml  subtract.yaml  udivmod.yaml  uninit.yaml  unsigned.yaml
test-data/regression/: map_sequential_lookup_unsafe.c
